--- a/_posts/2017-05-11-teams.md
+++ b/_posts/2017-05-11-teams.md
@@ -3,6 +3,7 @@ layout: post
 title: The Creation of Teams
 date:   2017-05-11 11:03:52 -0700
 published: true
+author: drupaldiversity
 ---
 
 The creation of teams
