#3038438: Create redirect from drupaldiversity.github.io

--- a/_posts/2017-05-11-teams.md
+++ b/_posts/2017-05-11-teams.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: The Creation of Teams
+redirect_to: https://www.drupaldiversity.com/blog/2017/creation-teams
 date:   2017-05-11 11:03:52 -0700
 published: true
 author: drupaldiversity
